<resources>
    <string name="app_name">W4D</string>
    <string name="signup"><u>Signup</u></string>
    <string name="Login"><u>Login</u></string>
    <string name="scan_barcode_vin_on_the_vehicle">Scan Barcode VIN on the Vehicle</string>
    <string name="Barcode">Barcode</string>
    <string name="login">Login</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="forget_password">Forget password?</string>
    <!--    <string name="don_t_have_an_account">Don't have an account?</string>-->
    <string name="post_vehicle">Post Vehicle</string>
    <string name="inventory">Inventory</string>
    <string name="search">Search</string>
    <string name="my_profile">My Profile</string>
    <string name="logout">Logout</string>
    <string name="todo">TODO</string>
    <string name="car_app">CAR APP</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="bar_code">Bar code</string>
    <string name="code">1M7DGO228NDFADF</string>
    <string name="details">Details</string>
    <string name="mileage">Mileage</string>
    <string name="stock_no">Stock No.</string>
    <string name="comments">Comments</string>
    <string name="submit">Submit</string>

    <string name="coming_soon">Coming soon</string>

    <string name="update_email">Update email</string>

    <string name="change_password">Change password</string>
    <string name="old_password">Old password</string>
    <string name="new_password">New password</string>
    <string name="confirm_password">Confirm password</string>
    <string name="john_123">John123</string>
    <string name="email">Email</string>
    <string name="update">Update</string>
    <string name="select_upto_10_images">(Select upto 10 images)</string>

</resources>