<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".Fragment.FragmentPostVehicle">

    <RelativeLayout
        android:id="@+id/header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="25dp">

        <ImageView
            android:id="@+id/back_arrow_img"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:layout_marginStart="12dp"
            android:src="@drawable/ic_back_arrow"
            android:layout_alignParentStart="true"
            />

        <TextView
            android:id="@+id/post_vehicle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:gravity="center"
            android:text="@string/post_vehicle"
            android:textColor="@color/black"
            android:textSize="18sp"
            />

    </RelativeLayout>

    <TextView
        android:id="@+id/bar_code_tv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/header"
        android:text="@string/bar_code"
        android:textStyle="bold"
        android:textSize="14sp"
        android:textColor="@color/black"
        android:layout_marginTop="16dp"
        android:layout_marginStart="12dp"
        />

    <TextView
        android:id="@+id/bar_code_tv_d"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/bar_code_tv"
        android:text="@string/code"
        android:textSize="16sp"
        android:textColor="@color/black"
        android:layout_marginTop="4dp"
        android:layout_marginStart="12dp"
        />

    <TextView
        android:id="@+id/details_tv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/bar_code_tv_d"
        android:text="@string/details"
        android:textStyle="bold"
        android:textSize="14sp"
        android:textColor="@color/black"
        android:layout_marginTop="16dp"
        android:layout_marginStart="12dp"
        />

    <TextView
        android:id="@+id/select_tv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/details_tv"
        android:text="@string/select_upto_10_images"
        android:textSize="16sp"
        android:textColor="@color/black"
        android:layout_marginTop="4dp"
        android:layout_marginStart="12dp"
        />

    <LinearLayout
        android:id="@+id/select_images_container"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:layout_marginTop="4dp"
        android:orientation="horizontal"
        android:paddingStart="12dp"
        android:background="@color/status_bar_color"
        app:layout_constraintTop_toBottomOf="@id/select_tv">

        <ImageView
            android:id="@+id/ic_camera"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:src="@drawable/ic_camera"
            android:layout_gravity="center_vertical"
            />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/image_recycler_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="12dp"
            android:layout_gravity="center_vertical"
            android:orientation="horizontal"
            tools:listitem="@layout/selected_picture"
            tools:itemCount="4"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            />
    </LinearLayout>

    <TextView
        android:id="@+id/mileage_tv"
        android:layout_width="match_parent"
        app:layout_constraintTop_toBottomOf="@id/select_images_container"
        android:layout_height="wrap_content"
        android:text="@string/mileage"
        android:layout_marginTop="12dp"
        android:layout_marginStart="24dp"
        android:textColor="@color/blue"
        />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/mileage"
        style="@style/TextInputLayoutStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/mileage_tv"
        android:layout_marginStart="24dp"
        android:hint=""
        android:layout_marginEnd="24dp">
        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingStart="24dp"
            android:textColor="@color/black"
            android:inputType="textEmailAddress"
            android:paddingEnd="24dp"
            android:imeOptions="actionNext" />
    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/stock_tv"
        android:layout_width="match_parent"
        app:layout_constraintTop_toBottomOf="@id/mileage"
        android:layout_height="wrap_content"
        android:text="@string/stock_no"
        android:layout_marginTop="12dp"
        android:layout_marginStart="24dp"
        android:textColor="@color/blue"
        />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/stock"
        style="@style/TextInputLayoutStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/stock_tv"
        android:layout_marginStart="24dp"
        android:hint=""
        android:layout_marginEnd="24dp">
        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingStart="24dp"
            android:textColor="@color/black"
            android:inputType="textEmailAddress"
            android:paddingEnd="24dp"
            android:imeOptions="actionNext" />
    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/message_tv"
        android:layout_width="match_parent"
        app:layout_constraintTop_toBottomOf="@id/stock"
        android:layout_height="wrap_content"
        android:text="@string/comments"
        android:layout_marginTop="12dp"
        android:layout_marginStart="24dp"
        android:textColor="@color/blue"
        />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/comment"
        style="@style/TextInputLayoutStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/message_tv"
        android:layout_marginStart="24dp"
        android:hint=""
        android:layout_marginEnd="24dp">
        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:paddingStart="24dp"
            android:textColor="@color/black"
            android:inputType="textEmailAddress"
            android:paddingEnd="24dp"
            android:imeOptions="actionNext" />
    </com.google.android.material.textfield.TextInputLayout>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/submit_btn"
        android:layout_width="150dp"
        android:layout_height="50dp"
        app:layout_constraintTop_toBottomOf="@id/comment"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        android:textStyle="bold"
        android:background="@color/blue_1"
        android:gravity="center"
        android:textAllCaps="false"
        android:text="@string/submit"
        android:textColor="@color/white"
        android:textSize="13sp" />

</androidx.constraintlayout.widget.ConstraintLayout>