<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="30dp"
    android:weightSum="3"
    tools:context=".Activities.MainActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">


            <TextView
                android:id="@+id/login_tv"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="0.6"
                android:gravity="center"
                android:text="@string/login"
                android:textColor="@color/black"
                android:textSize="18sp"


                />

            <Space
                android:layout_width="match_parent"
                android:layout_height="140dp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/username"
                android:textColor="@color/blue"
                android:textSize="15sp"


                />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/username_outline"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:boxStrokeColor="@color/blue">

                <EditText

                    android:id="@+id/username_edittxt"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

                <Space
                    android:layout_width="match_parent"
                    android:layout_height="10dp" />
            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                android:id="@+id/password_textview"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/password"
                android:textColor="@color/blue"
                android:textSize="15sp"


                />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/password_outline"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:boxStrokeColor="@color/blue">


                <EditText
                    android:id="@+id/password_edittv"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

                <Space
                    android:layout_width="match_parent"
                    android:layout_height="10dp" />
            </com.google.android.material.textfield.TextInputLayout>

            <TextView

                android:id="@+id/forget_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="right"
                android:text="@string/forget_password"

                android:textColor="@color/black"


                />

            <Space
                android:layout_width="match_parent"
                android:layout_height="10dp" />

            <androidx.appcompat.widget.AppCompatButton

                android:id="@+id/login_btn"
                android:layout_width="150dp"
                android:layout_height="50dp"
                android:layout_gravity="center"
                android:layout_marginTop="10dp"
                android:background="@drawable/corners"
                android:gravity="center"
                android:text="@string/login"
                android:textColor="@color/white"
                android:textSize="13sp" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="20dp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/don_t_have_an_account"
                android:textColor="@color/black"
                android:textSize="15sp"

                />

            <Space
                android:layout_width="match_parent"
                android:layout_height="20dp" />

            <TextView
                android:id="@+id/signup_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/signup"
                android:textColor="@color/black"


                />
        </LinearLayout>
    </ScrollView>


</LinearLayout>