<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".Fragment.FragmentInventory">

    <RelativeLayout
        android:id="@+id/header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="25dp">

        <ImageView
            android:id="@+id/back_arrow_img"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:layout_marginStart="12dp"
            android:src="@drawable/ic_back_arrow"
            android:layout_alignParentStart="true"
            />

        <TextView
            android:id="@+id/update_email_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:gravity="center"
            android:text="@string/update_email"
            android:textColor="@color/black"
            android:textSize="18sp"
            />
    </RelativeLayout>

    <TextView
        android:id="@+id/email_tv"
        android:layout_width="match_parent"
        app:layout_constraintTop_toBottomOf="@id/header"
        android:layout_height="wrap_content"
        android:text="@string/email"
        android:layout_marginTop="50dp"
        android:layout_marginStart="24dp"
        android:textColor="@color/blue"
        />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/email"
        style="@style/TextInputLayoutStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/email_tv"
        android:layout_marginStart="24dp"
        android:hint=""
        android:layout_marginEnd="24dp">
        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingStart="24dp"
            android:textColor="@color/black"
            android:inputType="textEmailAddress"
            android:paddingEnd="24dp"
            android:imeOptions="actionNext" />
    </com.google.android.material.textfield.TextInputLayout>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/update_btn"
        android:layout_width="150dp"
        android:layout_height="50dp"
        app:layout_constraintTop_toBottomOf="@id/email"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_gravity="center"
        android:layout_marginTop="30dp"
        android:textStyle="bold"
        android:background="@color/blue_1"
        android:gravity="center"
        android:textAllCaps="false"
        android:text="@string/update"
        android:textColor="@color/white"
        android:textSize="13sp" />

</androidx.constraintlayout.widget.ConstraintLayout>