<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:weightSum="3"
    tools:context=".Activities.PostVehicleActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">


            <TextView

                android:id="@+id/post_vehicle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"


                android:layout_marginTop="25dp"
                android:gravity="center"
                android:text="@string/post_vehicle"
                android:textColor="@color/black"
                android:textSize="18sp"

                />

            <Space
                android:layout_width="match_parent"
                android:layout_height="20dp" />

            <TextView


                android:id="@+id/scan_barcode"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="25dp"
                android:text="@string/scan_barcode_vin_on_the_vehicle"
                android:textColor="@color/black"
                android:textSize="18sp"


                />

            <Space
                android:layout_width="match_parent"
                android:layout_height="40dp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="210dp"
                android:background="@color/grey">

            </LinearLayout>

            <Space
                android:layout_width="match_parent"
                android:layout_height="15dp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="250dp"
                android:orientation="vertical"
                android:padding="20dp">

                <TextView
                    android:id="@+id/Barcode"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/Barcode"
                    android:textColor="@color/blue"
                    android:textSize="15sp"


                    />

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/password_outline"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:boxStrokeColor="@color/blue">


                    <EditText
                        android:id="@+id/barcode_edittext"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:padding="20dp" />

                    <Space
                        android:layout_width="match_parent"
                        android:layout_height="10dp" />
                </com.google.android.material.textfield.TextInputLayout>


                <Space
                    android:layout_width="match_parent"
                    android:layout_height="40dp" />

                <androidx.appcompat.widget.AppCompatButton

                    android:id="@+id/Next_btn"
                    android:layout_width="150dp"
                    android:layout_height="50dp"
                    android:layout_gravity="center"
                    android:layout_marginTop="10dp"
                    android:background="@drawable/corners"
                    android:gravity="center"
                    android:text="Next"
                    android:textColor="@color/white"
                    android:textSize="13sp" />


            </LinearLayout>

        </LinearLayout>
    </ScrollView>


</LinearLayout>